# markdown-to-confluence

./: .gitignore  .pre-commit-config.yaml  README.md  install_kiro_prompt.sh  kiro-publish-processing.sh  kiro-publish-to-confluence.py  md2conf-mermaid.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
.kiro/prompts/: publish-design.md
markdown_to_confluence/: __init__.py  cli.py  confluence_api.py  converter.py  mermaid.py
skills/markdown-to-confluence/: SKILL.md
skills/mermaid2conf/: SKILL.md
skills/mermaid2conf/scripts/: README.md  pyproject.toml
skills/mermaid2conf/scripts/src/markdown_to_confluence/: publish.py
tests/: test_converter.py  test_mermaid.py
